...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="249" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="duX-rG-AEh">
                                <rect key="frame" x="16" y="112" width="343" height="222.5"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your name:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NEl-Se-Sz1">
                                        <rect key="frame" x="0.0" y="0.0" width="343" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="249" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="tpX-xP-KsX">
                                        <rect key="frame" x="0.0" y="42" width="343" height="180.5"/>
...
                            <constraint firstItem="Uch-WW-3au" firstAttribute="trailing" secondItem="duX-rG-AEh" secondAttribute="trailing" constant="16" id="Uwo-mH-euL"/>
                            <constraint firstItem="duX-rG-AEh" firstAttribute="leading" secondItem="Uch-WW-3au" secondAttribute="leading" constant="16" id="yEE-IP-SDu"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="Uch-WW-3au"/>
                    </view>
                    <navigationItem key="navigationItem" title="New Message" id="cEt-mi-t96">
                        <barButtonItem key="rightBarButtonItem" title="Send" id="eC1-90-vuB">
                            <connections>
                                <action selector="sendMessage:" destination="BoB-4p-ZG3" id="k5g-wb-Dsb"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
